fix: fixed grid spacing to accomodate departments

--- a/HCIProject/src/app/sports/sports.component.css
+++ b/HCIProject/src/app/sports/sports.component.css
@@ -15,15 +15,10 @@
     max-width: 400px;
 }
 
-.item-card {
-    min-width: 400px;
-    max-width: 400px;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    min-width: 400px;
 }
   
 .example-header-image {
